<resources>
    <string name="app_name">S\'map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="share">Share</string>
    <string name="check_all">Check all</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="filter">Filter</string>
    <string name="camera">Camera</string>
    <string name="map_button">OK</string>
    <string name="show_gallery">Show gallery</string>
</resources>