<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/camera"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/fab_camera"
            android:layout_alignEnd="@id/fab_camera"
            android:src="@drawable/ic_filter"
            android:contentDescription="@string/filter" />

    </RelativeLayout >

    <LinearLayout
        android:id="@+id/slidePanel"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#F8F8F8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textTo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/to"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/mapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_button"
            android:textSize="22sp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_gallery"
            android:backgroundTint="#999999"
            android:textSize="11sp"
            android:layout_marginHorizontal="40dp"/>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>